--- a/src/navBar.scss
+++ b/src/navBar.scss
@@ -12,7 +12,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-height: 100vh;
+height: 50vh;
 position: relative;
 background: #eee;
     text-align: center;
@@ -20,7 +20,7 @@ background: #eee;
 h1 {
     font-size: 2rem;
     margin: 0;
-    letter-spacing: 1rem;
+    /*letter-spacing: 1rem;*/
 }
 h3 {
     font-size: 1rem;
