--- a/src/navBar.scss
+++ b/src/navBar.scss
@@ -14,7 +14,7 @@ justify-content: center;
 align-items: center;
 height: 50vh;
 position: relative;
-background: #eee;
+background: rgba(76, 175, 80, 0.0);
     text-align: center;
     padding: 0 2em;
 h1 {
