--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,6 @@ code {
     monospace;
 }
 
-/* latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjxAwXjeu.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
 @font-face {
   font-family: 'Lato';
   font-style: normal;
@@ -41,32 +32,48 @@ p {
   font-size: 20px;
 }
 
-button {
-  font-size: .7em;
-  text-align: left;
-  font-family: monospace;
-  background-color: #fff;
-  cursor: pointer;
-  border-width: 0em;
-  padding: .5em;
-  border-style: solid;
-  color: #fff;
-}
-
-.purple {
-  background-color: #651fff;
-}
 
 #links {
-  font-size: 20px;
+  background-color: transparent;
+  /* font-size: 20px;
   margin-top: 0px;
   margin-right: 0px;
   text-align: right;
-  background-color: #fff;
+  background-color: #fff; */
+
+  position: relative;
+  top: 0px;
+  flex-direction: column;
+  align-items: absolute;
+  display: block;
+  padding: 20px 0;
+  float: 'right'
+}
+
+button {
+  font-size: 10px;
+  color: black;
+  text-align: right;
+  font-family: monospace;
+  background-color: transparent;
+  cursor: grab;
+  border-width: 0em;
+  padding: .5em;
+  border-style: solid;
+  display: block;
+  float: inline-start;
+  outline: none;
+  align-items: center;
+}
+
+
+#textlink {
+  color: black;
+  font-size: 10px;
 }
 
 #name {
-  margin-top: 50px;
+  margin-top: -300px;
   margin-bottom: 30px;
   background-image: './icons/dmlogo.png';
 }
