--- a/src/navBar.scss
+++ b/src/navBar.scss
@@ -18,7 +18,7 @@ background: rgba(76, 175, 80, 0.0);
     text-align: center;
     padding: 0 2em;
 h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 0;
     /*letter-spacing: 1rem;*/
 }
@@ -30,22 +30,27 @@ h3 {
 }
 
 .et-hero-tabs-container {
+  
 display: flex;
 flex-direction: row;
 position: absolute;
 bottom: 0;
 width: 100%;
-height: 70px;
-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+height: 80px;
+box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 background: #fff;
 z-index: 10;
 &--top {
     position: fixed;
-    top: 0;
+    top: 0px;
+    
 }
 }
 
 .et-hero-tab {
+  
+    
+  
 display: flex;
 justify-content: center;
 align-items: center;
@@ -73,6 +78,7 @@ transition: left 0.3s ease;
 @media (min-width: 800px) {
 .et-hero-tabs,
 .et-slide {
+  
 h1 {
     font-size: 3rem;
 }
@@ -84,3 +90,154 @@ h3 {
     font-size: 1rem;
 }
 }
+  
+  /* hello world scrolll */
+  .content {
+    position: absolute;
+    top: 80%;
+    left: 51%;
+    transform: translate(-50%, -50%);
+    height: 130px;
+    overflow:hidden;
+    
+    font-family: 'Lato', sans-serif;
+    font-size: 45px;
+    line-height: 40px;
+    color: #45b6fe;
+    
+    &__container {
+      font-weight: 600;
+      overflow: hidden;
+      height: 55px;
+      padding: 0 60px;
+  
+      &:before {
+        content: '[';
+        left: 0;
+      }
+  
+      &:after {
+        content: ']';
+        position: absolute;
+        right: 0;
+      }
+  
+      &:after, &:before {
+        position: absolute;
+        top: 0;
+        
+        color: #16a085;
+        font-size: 55px;
+        line-height: 40px;
+        
+        -webkit-animation-name: opacity;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: infinite;
+        animation-name: opacity;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+      }
+  
+      &__text {
+        display: inline;
+        
+        font-size: 45px;
+        float: left;
+        margin: 0;
+        padding: 2%;
+      }
+  
+      &__list {
+        margin-top: 0;
+        padding-left: 150px;
+        text-align: left;
+        list-style: none;
+        
+        -webkit-animation-name: change;
+        -webkit-animation-duration: 10s;
+        -webkit-animation-iteration-count: infinite;
+        animation-name: change;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+  
+        &__item {
+          line-height:55px;
+          margin:0;
+        }
+      }
+    }
+  }
+  
+  @-webkit-keyframes opacity {
+    0%, 100% {opacity:0;}
+    50% {opacity:1;}
+  }
+  
+  @-webkit-keyframes change {
+    0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+    16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+    33.32%,45.98% {transform:translate3d(0,-50%,0);}
+    49.98%,62.64% {transform:translate3d(0,-75%,0);}
+    66.64%,79.3% {transform:translate3d(0,-50%,0);}
+    83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  }
+  
+  @-o-keyframes opacity {
+    0%, 100% {opacity:0;}
+    50% {opacity:1;}
+  }
+  
+  @-o-keyframes change {
+    0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+    16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+    33.32%,45.98% {transform:translate3d(0,-50%,0);}
+    49.98%,62.64% {transform:translate3d(0,-75%,0);}
+    66.64%,79.3% {transform:translate3d(0,-50%,0);}
+    83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  }
+  
+  @-moz-keyframes opacity {
+    0%, 100% {opacity:0;}
+    50% {opacity:1;}
+  }
+  
+  @-moz-keyframes change {
+    0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+    16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+    33.32%,45.98% {transform:translate3d(0,-50%,0);}
+    49.98%,62.64% {transform:translate3d(0,-75%,0);}
+    66.64%,79.3% {transform:translate3d(0,-50%,0);}
+    83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  }
+  
+  @keyframes opacity {
+    0%, 100% {opacity:0;}
+    50% {opacity:1;}
+  }
+  
+  @keyframes change {
+    0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+    16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+    33.32%,45.98% {transform:translate3d(0,-50%,0);}
+    49.98%,62.64% {transform:translate3d(0,-75%,0);}
+    66.64%,79.3% {transform:translate3d(0,-50%,0);}
+    83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  }
+  
+  // 6 is the number of animation.
+  // Here, there are 4 lines :
+  
+  // 1 to 2
+  // 2 to 3
+  // 3 to 4
+  // 4 to 3
+  // 3 to 2
+  // 2 to 1
+  
+  // 6x + 6y = 100 (100% duration)
+  
+  // HERE : 
+  // y = 4 -> Animation between two lines
+  // x = 12.66 -> Time spent on a line
+  
+  // You can define a value and calculate the other if you want change speed or the number of lines
