--- a/src/loader.scss
+++ b/src/loader.scss
@@ -13,7 +13,7 @@ $colors: blue,FUCHSIA,FUCHSIA,PURPLE,blue,PURPLE,FUCHSIA,FUCHSIA,blue;
 }
 
 .particle {
-  //background: #000;
+  background: #000;
   width: 50px;
   height: 50px;
   border-radius: 50%;
