--- a/src/navBar.scss
+++ b/src/navBar.scss
@@ -5,6 +5,9 @@ body {
 a {
 text-decoration: none;
 }
+.et-main{
+  flex-direction: column;
+}
 
 .et-hero-tabs,
 .et-slide {
@@ -12,8 +15,10 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-height: 50vh;
+height: relative;
 position: relative;
+margin-top: 5%;
+margin-bottom: 5%;
 background: rgba(76, 175, 80, 0.0);
     text-align: center;
     padding: 0 2em;
@@ -26,6 +31,8 @@ h3 {
     font-size: 1.5rem;
     letter-spacing: 0.1rem;
     opacity: 0.6;
+    display: flex;
+    flex-direction: column;
 }
 }
 
@@ -43,8 +50,7 @@ z-index: 10;
 &--top {
     position: fixed;
     top: 0px;
-    
-}
+  }
 }
 
 .et-hero-tab {
@@ -60,7 +66,7 @@ letter-spacing: 0.1rem;
         color:white;
   background: rgba(102,177,241,0.8);
         transition: all 0.5s ease;
-}
+  }
 }
 
 .et-hero-tab-slider {
@@ -75,6 +81,7 @@ transition: left 0.3s ease;
 @media (min-width: 800px) {
 .et-hero-tabs,
 .et-slide {
+
   
 h1 {
     font-size: 3rem;
@@ -86,6 +93,9 @@ h3 {
     text-decoration: underline;
     font-weight: bold;
     font-weight: 900;
+    display: flex;
+    flex-direction: column;
+     
 }
 }
 .et-hero-tab {
