--- a/src/navBar.scss
+++ b/src/navBar.scss
@@ -1,5 +1,7 @@
 body {
     font-family: "Century Gothic", 'Lato', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -17,9 +19,9 @@ justify-content: center;
 align-items: center;
 height: relative;
 position: relative;
-margin-top: 5%;
-margin-bottom: 5%;
-background: rgba(76, 175, 80, 0.0);
+margin-top: .05%;
+margin-bottom: 0%;
+background: rgba(20, 0, 59, 0);
     text-align: center;
     padding: 0 2em;
 h1 {
@@ -37,21 +39,24 @@ h3 {
 }
 
 .et-hero-tabs-container {
-  
-display: flex;
-flex-direction: row;
-position: absolute;
-bottom: 0;
-width: 100%;
-height: 80px;
-box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
-background: #fff;
-z-index: 10;
-&--top {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  margin: 0; /* Remove any margin */
+  padding: 0; /* Remove any padding */
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  background: #fff;
+  z-index: 10;
+  &--top {
     position: fixed;
     top: 0px;
   }
 }
+
+
 
 .et-hero-tab {
 display: flex;
@@ -138,7 +143,7 @@ h3 {
         position: absolute;
         top: 0;
         
-        color: #16a085;
+        color: #3f16a0;
         font-size: 55px;
         line-height: 40px;
         
@@ -236,20 +241,3 @@ h3 {
     83.3%,95.96% {transform:translate3d(0,-25%,0);}
   }
   
-  // 6 is the number of animation.
-  // Here, there are 4 lines :
-  
-  // 1 to 2
-  // 2 to 3
-  // 3 to 4
-  // 4 to 3
-  // 3 to 2
-  // 2 to 1
-  
-  // 6x + 6y = 100 (100% duration)
-  
-  // HERE : 
-  // y = 4 -> Animation between two lines
-  // x = 12.66 -> Time spent on a line
-  
-  // You can define a value and calculate the other if you want change speed or the number of lines
